# heaps

./: .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Heap.html  HLint.hs  README.markdown  cabal.haskell-ci  doc-index.html  heaps.cabal  heaps.haddock  index-frames.html  index.html  mini_Data-Heap.html
.github/workflows/: haskell-ci.yml
Data/: Heap.hs
Data/Heap/: Banker.hs  Soft.hs  Splittable.hs
src/: Data-Heap.html
src/Data/: Heap.hs
