name:           heaps
version:        0.3.2
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://github.com/ekmett/heaps/
bug-reports:    http://github.com/ekmett/heaps/issues
category:       Data Structures
synopsis:       Asymptotically optimal Brodal/Okasaki heaps.
description:    Asymptotically optimal Brodal\/Okasaki bootstrapped skew-binomial heaps from the paper <http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.48.973 "Optimal Purely Functional Priority Queues">, extended with a 'Foldable' interface.
copyright:      (c) 2010 Edward A. Kmett
tested-with:    GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.0.20150307
build-type:     Simple
cabal-version:  >=1.8
extra-source-files: HLint.hs .gitignore .travis.yml CHANGELOG.markdown README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/heaps.git

library
  exposed-modules: Data.Heap
  build-depends:
    base >= 4 && < 6
  hs-source-dirs: src
  ghc-options: -O2

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
    base,
    directory >= 1.0 && < 1.3,
    doctest >= 0.9 && <= 0.10,
    filepath
  ghc-options: -Wall
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
