name:           heaps
version:        0.3.6
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://github.com/ekmett/heaps/
bug-reports:    http://github.com/ekmett/heaps/issues
category:       Data Structures
synopsis:       Asymptotically optimal Brodal/Okasaki heaps.
description:    Asymptotically optimal Brodal\/Okasaki bootstrapped skew-binomial heaps from the paper <http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.48.973 "Optimal Purely Functional Priority Queues">, extended with a 'Foldable' interface.
copyright:      (c) 2010-2015 Edward A. Kmett
tested-with:    GHC == 7.0.4
              , GHC == 7.2.2
              , GHC == 7.4.2
              , GHC == 7.6.3
              , GHC == 7.8.4
              , GHC == 7.10.3
              , GHC == 8.0.2
              , GHC == 8.2.2
              , GHC == 8.4.2
build-type:     Custom
cabal-version:  >=1.8
extra-source-files:
  HLint.hs
  Warning.hs
  .gitignore
  .travis.yml
  CHANGELOG.markdown
  README.markdown

custom-setup
  setup-depends:
    base          >= 4.3 && <5,
    Cabal         >= 1.10,
    cabal-doctest >= 1 && <1.1

source-repository head
  type: git
  location: git://github.com/ekmett/heaps.git

library
  exposed-modules: Data.Heap
  build-depends:
    base >= 4 && < 6
  hs-source-dirs: src
  ghc-options: -O2

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
    base,
    directory >= 1.0 && < 1.4,
    doctest >= 0.9 && < 0.16,
    filepath,
    heaps
  ghc-options: -Wall
  hs-source-dirs: tests
