name:           heaps
version:        0.4
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://github.com/ekmett/heaps/
bug-reports:    http://github.com/ekmett/heaps/issues
category:       Data Structures
synopsis:       Asymptotically optimal Brodal/Okasaki heaps.
description:    Asymptotically optimal Brodal\/Okasaki bootstrapped skew-binomial heaps from the paper <http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.48.973 "Optimal Purely Functional Priority Queues">, extended with a 'Foldable' interface.
copyright:      (c) 2010-2015 Edward A. Kmett
tested-with:    GHC == 8.0.2
              , GHC == 8.2.2
              , GHC == 8.4.4
              , GHC == 8.6.5
              , GHC == 8.8.4
              , GHC == 8.10.4
              , GHC == 9.0.2
              , GHC == 9.2.8
              , GHC == 9.4.8
              , GHC == 9.6.6
              , GHC == 9.8.4
              , GHC == 9.10.1
build-type:     Simple
cabal-version:  >=1.10
extra-source-files:
  .gitignore
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/heaps.git

library
  exposed-modules: Data.Heap
  build-depends:
    base >= 4.9 && < 6
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  default-language: Haskell2010
